# CatBench

./: .gitattributes  .gitignore  CLAUDE.md  CLAUDE_SUGGESTIONS.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml  test.yml
catbench/: __init__.py  config.py
catbench/adsorption/: __init__.py
catbench/adsorption/analysis/: analysis.py
catbench/adsorption/calculation/: calculation.py
catbench/adsorption/data/: __init__.py  cathub.py  vasp.py  zenodo.py
catbench/dispersion/: correction.py
catbench/dispersion/cuda/pair_e3gnn/: pair_d3_for_ase.cu  pair_d3_for_ase.h
catbench/eos/: __init__.py
catbench/eos/analysis/: analysis.py
catbench/eos/calculation/: calculation.py
catbench/eos/data/: vasp.py
catbench/relative/: __init__.py  analysis.py  calculation.py
catbench/relative/bulk_formation/data/: vasp.py
catbench/relative/surface_energy/data/: cathub.py  vasp.py
catbench/utils/: analysis_utils.py  calculation_utils.py  data_utils.py  io_utils.py  structure_dedup.py
tests/: conftest.py  test_adsorption.py  test_anomaly_counting.py  test_classifier.py  test_config.py  test_constraints.py  test_dedup_integration.py  test_dispersion.py  test_displacement.py  test_eos.py  test_imports.py  test_relative.py  test_robustness.py  test_storage_dedup.py  test_structure_dedup.py  test_vasp_preprocessing.py  test_zenodo.py
tutorials/: catbench_tutorial.ipynb
