[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "catbench"
version = "1.0.1"
description = "CatBench Framework for Benchmarking Machine Learning Interatomic Potentials in Adsorption Energy Predictions for Heterogeneous Catalysis"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["MLIP", "benchmark", "catalysis"]
authors = [{ name = "JinukMoon", email = "jumoon@snu.ac.kr" }]
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "ase>=3.22.1",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "requests>=2.25.0",
    "xlsxwriter>=3.2.0",
    "pyyaml>=5.4.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
d3 = ["torch>=1.12.0"]

[project.urls]
Homepage = "https://github.com/JinukMoon/catbench"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["catbench*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"catbench.dispersion" = [
    "cuda/*.py",
    "cuda/*.so",
    "cuda/pair_e3gnn/*.cu",
    "cuda/pair_e3gnn/*.h",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
